[package]
name = "chip8"
version = "0.1.0"
authors = ["Jason Olson <jolson88@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.13"
enum-primitive-derive = "^0.1"
num-traits = "^0.1"
rand = "0.7.0"
